--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Mc'Sl0vv
 description: Belajar Hal Baru Tentang Dunia Internet
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://mcsl0vv.github.io/images/1620408510682.jpg
 #
 # Flags below are optional
 #
@@ -18,17 +17,17 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: ikiwoioi11@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
+  github:McSl0vv
+  instagram:shizukana.rizuki
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: /SILUMANWIBU
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
